--- a/src/main/resources/vente.fxml
+++ b/src/main/resources/vente.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="625.0" prefWidth="974.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.VenteController">
+<AnchorPane prefHeight="625.0" prefWidth="974.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.VenteController">
    <children>
       <VBox prefHeight="659.0" prefWidth="974.0">
          <children>
@@ -33,7 +25,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField editable="false" prefHeight="33.0" prefWidth="239.0" />
+                              <TextField fx:id="dateVente" editable="false" prefHeight="33.0" prefWidth="239.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -43,7 +35,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField editable="false" prefHeight="33.0" prefWidth="239.0" />
+                              <TextField fx:id="numVente" editable="false" prefHeight="33.0" prefWidth="239.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -53,7 +45,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <ComboBox prefHeight="34.0" prefWidth="241.0" />
+                              <ComboBox fx:id="comboBoxProduits" prefHeight="34.0" prefWidth="241.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -63,7 +55,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField prefHeight="32.0" prefWidth="241.0" />
+                              <TextField fx:id="libelleProduit" prefHeight="32.0" prefWidth="241.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -73,7 +65,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField editable="false" prefHeight="32.0" prefWidth="234.0" />
+                              <TextField fx:id="prix" editable="false" prefHeight="32.0" prefWidth="234.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -83,7 +75,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <Spinner prefHeight="34.0" prefWidth="241.0" />
+                              <Spinner fx:id="spinnerQte" prefHeight="34.0" prefWidth="241.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -93,12 +85,12 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField editable="false" prefHeight="32.0" prefWidth="215.0" />
+                              <TextField fx:id="qteDispo" editable="false" prefHeight="32.0" prefWidth="215.0" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="355.0" text="Ajouter au panier">
+                              <Button fx:id="btnAddToCart" mnemonicParsing="false" onAction="#addToCart" prefHeight="58.0" prefWidth="355.0" text="Ajouter au panier">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
@@ -107,7 +99,7 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <TableView prefHeight="385.0" prefWidth="585.0" />
+                  <TableView fx:id="listeProduits" prefHeight="385.0" prefWidth="585.0" />
                </children>
             </HBox>
             <HBox prefHeight="236.0" prefWidth="974.0">
@@ -119,26 +111,26 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField editable="false" layoutX="14.0" layoutY="44.0" prefHeight="31.0" prefWidth="379.0" />
+                        <TextField fx:id="total" editable="false" layoutX="14.0" layoutY="44.0" prefHeight="31.0" prefWidth="379.0" />
                         <Label layoutX="14.0" layoutY="94.0" text="Payé">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField editable="false" layoutX="14.0" layoutY="116.0" prefHeight="31.0" prefWidth="379.0" />
+                        <TextField fx:id="paye" editable="false" layoutX="14.0" layoutY="116.0" prefHeight="31.0" prefWidth="379.0" />
                         <Label layoutX="14.0" layoutY="164.0" text="Rendu">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField editable="false" layoutX="14.0" layoutY="186.0" prefHeight="31.0" prefWidth="379.0" />
+                        <TextField fx:id="rendu" editable="false" layoutX="14.0" layoutY="186.0" prefHeight="31.0" prefWidth="379.0" />
                         <Line endX="795.5" layoutX="130.0" layoutY="16.0" startX="-49.5" />
-                        <Button layoutX="539.0" layoutY="61.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="364.0" style="-fx-background-color: #7ad551;" text="TERMINER LA VENTE" textFill="WHITE">
+                        <Button fx:id="btnTerminerVente" layoutX="539.0" layoutY="61.0" mnemonicParsing="false" onAction="#terminerVente" prefHeight="52.0" prefWidth="364.0" style="-fx-background-color: #7ad551;" text="TERMINER LA VENTE" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="539.0" layoutY="150.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="364.0" style="-fx-background-color: #bf4e44;" text="ANNULER" textFill="WHITE">
+                        <Button fx:id="btnAnnuler" layoutX="539.0" layoutY="150.0" mnemonicParsing="false" onAction="#annulerVente" prefHeight="52.0" prefWidth="364.0" style="-fx-background-color: #bf4e44;" text="ANNULER" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
