--- a/src/main/resources/menu_caissier.fxml
+++ b/src/main/resources/menu_caissier.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="77.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.MenuCaissierController">
+<AnchorPane fx:id="window" prefHeight="77.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.MenuCaissierController">
    <children>
       <VBox alignment="CENTER" prefHeight="240.0" prefWidth="285.0" spacing="20.0">
          <children>
@@ -16,15 +14,15 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="255.0" style="-fx-background-color: #7ad551;" text="Nouvelle vente" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#onNewVente" prefHeight="34.0" prefWidth="255.0" style="-fx-background-color: #7ad551;" text="Nouvelle vente" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font></Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="256.0" text="Responsable session">
+            <Button mnemonicParsing="false"  prefHeight="35.0" prefWidth="256.0" text="Responsable session">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font></Button>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="257.0" style="-fx-background-color: #bf4e44; -fx-color: #000;" text="Quitter" />
+            <Button mnemonicParsing="false" onAction="#onExit" prefHeight="34.0" prefWidth="257.0" style="-fx-background-color: #bf4e44; -fx-color: #000;" text="Quitter" />
          </children>
          <opaqueInsets>
             <Insets />
