--- a/src/main/resources/vente.fxml
+++ b/src/main/resources/vente.fxml
@@ -40,7 +40,7 @@
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
                            <children>
-                              <Label contentDisplay="CENTER" prefHeight="31.0" prefWidth="123.0" text="   Produit">
+                              <Label contentDisplay="CENTER" prefHeight="31.0" prefWidth="123.0" text="   Code Article">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
@@ -50,12 +50,12 @@
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
                            <children>
-                              <Label contentDisplay="CENTER" prefHeight="31.0" prefWidth="123.0" text="   Libellé produit">
+                              <Label contentDisplay="CENTER" prefHeight="31.0" prefWidth="123.0" text="   Libellé article">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="libelleProduit" prefHeight="32.0" prefWidth="241.0" />
+                              <TextField fx:id="libelleProduit" editable="false" prefHeight="32.0" prefWidth="241.0" />
                            </children>
                         </HBox>
                         <HBox prefHeight="46.0" prefWidth="552.0" spacing="10.0">
@@ -117,7 +117,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="paye" editable="false" layoutX="14.0" layoutY="116.0" prefHeight="31.0" prefWidth="379.0" />
+                        <TextField fx:id="paye" layoutX="14.0" layoutY="116.0" prefHeight="31.0" prefWidth="379.0" />
                         <Label layoutX="14.0" layoutY="164.0" text="Rendu">
                            <font>
                               <Font name="System Bold" size="14.0" />
