--- a/src/main/resources/vente.fxml
+++ b/src/main/resources/vente.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="window" prefHeight="625.0" prefWidth="974.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.VenteController">
+<AnchorPane fx:id="window" prefHeight="625.0" prefWidth="974.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.projet.pvc.controllers.VenteController">
    <children>
       <VBox prefHeight="659.0" prefWidth="974.0">
          <children>
@@ -99,7 +108,15 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <TableView fx:id="listeProduits" prefHeight="385.0" prefWidth="585.0" />
+                  <TableView fx:id="listeLigneDeVente" prefHeight="385.0" prefWidth="585.0">
+                     <columns>
+                        <TableColumn fx:id="cpuColumn" prefWidth="75.0" text="CPU" />
+                        <TableColumn fx:id="libelleColumn" prefWidth="75.0" text="Libellé" />
+                        <TableColumn fx:id="prixColumn" prefWidth="75.0" text="Prix" />
+                        <TableColumn fx:id="qtColumn" prefWidth="75.0" text="Quantité" />
+                        <TableColumn fx:id="stColumn" prefWidth="75.0" text="Sous total" />
+                        <TableColumn fx:id="actionColumn" prefWidth="75.0" text="Action" />
+                     </columns></TableView>
                </children>
             </HBox>
             <HBox prefHeight="236.0" prefWidth="974.0">
